--- a/Conv1D_VAE.ipynb
+++ b/Conv1D_VAE.ipynb
@@ -2,23 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(307200, 4)\n(300, 1024, 4)\n"
+      "Using TensorFlow backend.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30, 1024, 4)\n"
+      "(307200, 4)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300, 1024, 4)\n(30, 1024, 4)\n"
      ]
     }
    ],
@@ -96,7 +103,7 @@
     "from keras.layers import MaxPooling1D, MaxPool1D, Conv2DTranspose, BatchNormalization, RepeatVector\n",
     "import tensorflow as tf\n",
     "\n",
-    "input_shape = (1024, n_features)\n",
+    "input_shape = (None, n_features)\n",
     "latent_dim = 20\n",
     "kernel_size = 2\n",
     "use_mse = True   \n",
