--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -97,9 +97,8 @@
     "    # \n",
     "    # variance_lat = 0.000005\n",
     "    # variance_lon = 0.000005\n",
-    "    variance_lat = 0\n",
-    "    variance_lon = 0\n",
-    "    \n",
+    "    variance_lat = 0.000005\n",
+    "    variance_lon = 0.000005\n",
     "    \n",
     "    \n",
     "    def noise_lon(coord):\n",
@@ -110,7 +109,6 @@
     "    def noise_lat(coord):\n",
     "        noise = coord - np.random.normal(coord, variance_lat)\n",
     "        return coord + noise\n",
-    "    \n",
     "    \n",
     "    \n",
     "    for i, elem in enumerate(lats):\n",
@@ -189,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import random as r\n",
     "\n",
     "def create_anom_data(sign1, sign2):\n",
     "    def headingFromCoordinates(lat1, lon1, lat2, lon2): \n",
@@ -262,8 +260,8 @@
     "            11.02115422, 11.02033527, 11.02038858, 11.02118961, 11.02124338,\n",
     "            11.02045991, 11.02053796, 11.0213068174]\n",
     "    \n",
-    "    variance_lat = 0\n",
-    "    variance_lon = 0\n",
+    "    variance_lat = 0.000005\n",
+    "    variance_lon = 0.000005\n",
     "    \n",
     "    def noise_lon(coord):\n",
     "        noise = coord - np.random.normal(coord, variance_lon)\n",
@@ -301,6 +299,7 @@
     "        if i % 4 == 0:\n",
     "            dl = l / vertical_length\n",
     "            alpha = 180 - headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            param = r.random()\n",
     "            for j in range(1, vertical_length):\n",
     "                if sign1 == 1:\n",
     "                    alpha_m = alpha - modify_angle(j)\n",
@@ -319,6 +318,7 @@
     "        if i % 4 == 2:\n",
     "            dl = l / vertical_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
+    "            param = r.random()\n",
     "            for j in range(1, vertical_length):\n",
     "                if sign2 == 1:\n",
     "                    alpha_m = alpha - modify_angle(j)\n",
@@ -402,14 +402,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(30):\n",
+    "for i in range(300):\n",
     "    choice = np.random.choice([0, 1, 2, 3, 4, 5, 6, 7, 8], \n",
     "                              p=[0.6, 0.05, 0.05, 0.05, \n",
     "                                 0.05, 0.05, 0.05, 0.05,\n",
@@ -442,6 +464,8 @@
     "        nom_list.append(choice)\n",
     "        data = create_nom_data()\n",
     "    df = df.append(data)\n",
+    "    if (i%100 == 0):\n",
+    "        print(i)\n",
     "\n",
     "label_df = pd.DataFrame(np.array(nom_list), columns=['label'])\n"
    ]
@@ -474,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,12 +512,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "validation = True\n",
+    "validation = False\n",
     "# anomalous = True\n",
     "if not validation:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
