--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    spd = []\n",
     "    dgr = []\n",
     "    \n",
-    "    for i in range(5):\n",
+    "    for i in range(1):\n",
     "        for i in range(vertical_length):\n",
     "            spd.append(np.random.normal(0.5, 0.3))\n",
     "            dgr.append(np.random.normal(107.5, deg_var))\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "    spd = []\n",
     "    dgr = []\n",
     "    \n",
-    "    for i in range(5):\n",
+    "    for i in range(1):\n",
     "        for i in range(vertical_length):\n",
     "            spd.append(np.random.normal(0.5, 0.3))\n",
     "            dgr.append(np.random.normal(107.5, deg_var))\n",
@@ -232,6 +232,7 @@
     "        spd.append(np.random.normal(-0.5, 0.3))\n",
     "        dgr.append(np.random.normal(287.5, deg_var))\n",
     "    \n",
+    "    print(len(spd), len(dgr))\n",
     "    \n",
     "    # for i in range(len(dgr)):\n",
     "    #     dgr[i] = dgr[i] + 140\n",
@@ -259,6 +260,8 @@
     "            11.02093044 , 11.02100831, 11.02020208, 11.02025402, 11.02108572,\n",
     "            11.02115422, 11.02033527, 11.02038858, 11.02118961, 11.02124338,\n",
     "            11.02045991, 11.02053796, 11.0213068174]\n",
+    "    lats = lats[:5]\n",
+    "    lons = lons[:5]\n",
     "    \n",
     "    variance_lat = 0.000005\n",
     "    variance_lon = 0.000005\n",
@@ -273,8 +276,8 @@
     "    \n",
     "    k = np.linspace(-3,3, vertical_length+1) \n",
     "    \n",
-    "    def modify_angle(index):\n",
-    "        change = 5*2.5*np.exp(-np.power(k[index], 2.) / (2 * np.power(1, 2.)))\n",
+    "    def modify_angle(index, param):\n",
+    "        change = 5*param*2.5*np.exp(-np.power(k[index], 2.) / (2 * np.power(1, 2.)))\n",
     "        return change\n",
     "    \n",
     "    for i, elem in enumerate(lats):\n",
@@ -289,7 +292,10 @@
     "    \n",
     "    dgr_mod = []\n",
     "    \n",
+    "    deviation_params = []\n",
+    "    deviation_index = 0\n",
     "    for i in range(len(lats) - 1):\n",
+    "        print(\"MEGACIAO\")\n",
     "        start_lat = lats[i]\n",
     "        start_lon = lons[i]\n",
     "        g_lat.append(start_lat)\n",
@@ -299,16 +305,20 @@
     "        if i % 4 == 0:\n",
     "            dl = l / vertical_length\n",
     "            alpha = 180 - headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
-    "            param = r.random()\n",
+    "            if sign1 == 1 or sign1 == 2:\n",
+    "                param = r.random()\n",
+    "                deviation_params.append(param)\n",
     "            for j in range(1, vertical_length):\n",
     "                if sign1 == 1:\n",
-    "                    alpha_m = alpha - modify_angle(j)\n",
+    "                    alpha_m = alpha - modify_angle(j, deviation_params[deviation_index])\n",
     "                elif sign1 == 2:\n",
-    "                    alpha_m = alpha + modify_angle(j)\n",
+    "                    alpha_m = alpha + modify_angle(j, deviation_params[deviation_index])\n",
     "                else:\n",
     "                    alpha_m = alpha\n",
     "                g_lon.append(noise_lon((start_lon - (j * dl * cos(radians(alpha_m))))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
+    "            if sign1 == 1 or sign1 == 2:\n",
+    "                deviation_index += 1\n",
     "        if i % 4 == 1:\n",
     "            dl = l / orizontal_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
@@ -318,16 +328,20 @@
     "        if i % 4 == 2:\n",
     "            dl = l / vertical_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
-    "            param = r.random()\n",
+    "            if sign2 == 1 or sign2 == 2:\n",
+    "                param = r.random()\n",
+    "                deviation_params.append(param)\n",
     "            for j in range(1, vertical_length):\n",
     "                if sign2 == 1:\n",
-    "                    alpha_m = alpha - modify_angle(j)\n",
+    "                    alpha_m = alpha - modify_angle(j, deviation_params[deviation_index])\n",
     "                elif sign2 == 2:\n",
-    "                    alpha_m = alpha + modify_angle(j)\n",
+    "                    alpha_m = alpha + modify_angle(j, deviation_params[deviation_index])\n",
     "                else:\n",
     "                    alpha_m = alpha\n",
     "                g_lon.append(noise_lon(start_lon + (j * dl * cos(radians(alpha_m)))))\n",
     "                g_lat.append(noise_lat(start_lat + (j * dl * sin(radians(alpha_m)))))\n",
+    "            if sign2 == 1 or sign2 == 2:\n",
+    "                deviation_index += 1\n",
     "        if i % 4 == 3:\n",
     "            dl = l / orizontal_length\n",
     "            alpha = headingFromCoordinates(lats[i], lons[i], lats[i + 1], lons[i + 1])\n",
@@ -338,26 +352,34 @@
     "    def modify_degrees():\n",
     "        dgr_mod = []\n",
     "        index = 1\n",
+    "        deviation_index = 0\n",
+    "        dev_bool = False\n",
     "        for deg in dgr:\n",
     "            if abs(deg - 107.5) < 10 and sign1 == 1:\n",
-    "                dgr_mod.append(deg - modify_angle(index))\n",
+    "                dgr_mod.append(deg - modify_angle(index,deviation_params[deviation_index]))\n",
     "                index += 1\n",
+    "                dev_bool = True\n",
     "            elif abs(deg - 107.5) < 10 and sign1 == 2:\n",
-    "                dgr_mod.append(deg + modify_angle(index))\n",
+    "                dgr_mod.append(deg + modify_angle(index,deviation_params[deviation_index]))\n",
     "                index += 1\n",
+    "                dev_bool = True\n",
     "            elif abs(deg - 287.5) < 10 and sign2 == 1:\n",
-    "                dgr_mod.append(deg - modify_angle(index))\n",
+    "                dgr_mod.append(deg - modify_angle(index,deviation_params[deviation_index]))\n",
     "                index += 1\n",
+    "                dev_bool = True\n",
     "            elif abs(deg - 287.5) < 10 and sign2 == 2:\n",
-    "                dgr_mod.append(deg - modify_angle(index))\n",
+    "                dgr_mod.append(deg - modify_angle(index,deviation_params[deviation_index]))\n",
     "                index += 1\n",
+    "                dev_bool = True\n",
     "            else:\n",
     "                dgr_mod.append(deg)\n",
-    "                index = 1    \n",
+    "                index = 1\n",
+    "                if dev_bool:    \n",
+    "                    deviation_index += 1\n",
+    "                    dev_bool = False\n",
     "        return dgr_mod\n",
     "    \n",
-    "    dgr_mod = modify_degrees()\n",
-    "    \n",
+    "    #dgr_mod = modify_degrees()\n",
     "    sins = []\n",
     "    cosins = []\n",
     "    for i, degree in enumerate(dgr_mod):\n",
@@ -368,14 +390,16 @@
     "               \"Acceleration\", \"M0C\", \n",
     "               \"M1C\", \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    # plt.plot(g_lon, g_lat)\n",
+    "    print(len(dgr), len(spd), len(sins),len(cosins))\n",
+    "    \n",
+    "    plt.plot(g_lon, g_lat)\n",
+    "    # plt.show()\n",
     "    # plt.title(str(sign1)+\n",
     "    #             str(sign2)+\":\"+str(choice))\n",
     "    # plt.show()\n",
     "    #  \n",
-    "    # plt.plot(dgr)\n",
     "    # plt.plot(dgr_mod)\n",
-    "    # plt.show()\n",
+    "    plt.show()\n",
     "\n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    df[\"Speed\"] = spd\n",
@@ -402,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -411,27 +435,13 @@
      "text": [
       "0\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
     }
    ],
    "source": [
     "df = create_nom_data()\n",
     "nom_list = []\n",
     "df = df.iloc[0:0]\n",
-    "for i in range(300):\n",
+    "for i in range(30):\n",
     "    choice = np.random.choice([0, 1, 2, 3, 4, 5, 6, 7, 8], \n",
     "                              p=[0.6, 0.05, 0.05, 0.05, \n",
     "                                 0.05, 0.05, 0.05, 0.05,\n",
@@ -498,26 +508,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "338 338\nMEGACIAO\nMEGACIAO\nMEGACIAO\nMEGACIAO\n338 338 0 0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Length of values does not match length of index",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-78-2284b6fc7276>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_anom_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msign1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msign2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msave\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0msave\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-77-d02d0700e225>\u001b[0m in \u001b[0;36mcreate_anom_data\u001b[1;34m(sign1, sign2)\u001b[0m\n\u001b[0;32m    211\u001b[0m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    212\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Speed\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 213\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Sin\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msins\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    214\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Cosin\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcosins\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    215\u001b[0m     \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Acceleration\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0macc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\Lstm_vae_boat_data\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3485\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3486\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3487\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\Lstm_vae_boat_data\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3562\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3563\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3564\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3565\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3566\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\Lstm_vae_boat_data\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, key, value, broadcast)\u001b[0m\n\u001b[0;32m   3747\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3748\u001b[0m             \u001b[1;31m# turn me into an ndarray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3749\u001b[1;33m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msanitize_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3750\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3751\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\Lstm_vae_boat_data\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36msanitize_index\u001b[1;34m(data, index, copy)\u001b[0m\n\u001b[0;32m    610\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    611\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 612\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Length of values does not match length of index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    613\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    614\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mABCIndexClass\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Length of values does not match length of index"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
     "\n",
     "df = create_anom_data(sign1=1, sign2=1)\n",
     "\n",
-    "save = True\n",
+    "save = False\n",
     "if save:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_unseen.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "validation = False\n",
+    "validation = True\n",
     "# anomalous = True\n",
     "if not validation:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_sequences_mix.csv\")\n",
