--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +211,14 @@
     "    \n",
     "    #print(len(dgr), len(spd), len(sins),len(cosins))\n",
     "    \n",
-    "    #plt.plot(g_lon, g_lat)\n",
+    "    plt.plot(g_lon, g_lat)\n",
     "    # plt.show()\n",
     "    # plt.title(str(sign1)+\n",
     "    #             str(sign2)+\":\"+str(choice))\n",
     "    # plt.show()\n",
     "    #  \n",
     "    #plt.plot(dgr_mod)\n",
-    "    #plt.show()\n",
+    "    plt.show()\n",
     "\n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    #df[\"Speed\"] = spd\n",
@@ -302,22 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "180 180 180 180\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "df = create_data(sign1=1, sign2=0, n_cycles=1)\n",
+    "df = create_data(sign1=2, sign2=2, n_cycles=1)\n",
     "\n",
-    "save = False\n",
+    "save = True\n",
     "if save:\n",
     "    df.to_csv(\"Data/Boat_nominal_data/Boat_unseen.csv\")\n"
    ]
