STARTING DIFFRENT LENGTH sequences

--- a/Create_nominal_boat_data.ipynb
+++ b/Create_nominal_boat_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "    columns = [\"Sin\", \"Cosin\",  \n",
     "               \"Lat\", \"Lon\"]\n",
     "    \n",
-    "    #print(len(dgr), len(spd), len(sins),len(cosins))\n",
+    "    print(len(dgr), len(spd), len(sins),len(cosins))\n",
     "    \n",
     "    plt.plot(g_lon, g_lat)\n",
     "    # plt.show()\n",
@@ -219,7 +219,9 @@
     "    #  \n",
     "    #plt.plot(dgr_mod)\n",
     "    plt.show()\n",
+    "    \n",
     "\n",
+    "    \n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    #df[\"Speed\"] = spd\n",
     "    df[\"Sin\"] = sins\n",
@@ -227,6 +229,7 @@
     "    #df[\"Acceleration\"] = acc\n",
     "    #df[\"M0C\"] = m0c\n",
     "    #df[\"M1C\"] = m1c\n",
+    "    print(len(df), len(g_lat))\n",
     "    df[\"Lat\"] = g_lat\n",
     "    df[\"Lon\"] = g_lon\n",
     "    \n",
@@ -245,27 +248,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "180 180 180 180\n180 180\n0\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n180 180\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n180 180\n180 180 180 180\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180 180\n180 180 180 180\n180 180\n"
      ]
     }
    ],
    "source": [
-    "df = create_data(sign1=0, sign2=0, n_cycles=1)\n",
+    "df = []\n",
     "nom_list = []\n",
-    "n_cycles = 1\n",
-    "df = df.iloc[0:0]\n",
-    "for i in range(30):\n",
+    "for i in range(10):\n",
     "    choice = np.random.choice([0, 1, 2, 3, 4, 5, 6, 7, 8], \n",
     "                              p=[0.6, 0.05, 0.05, 0.05, \n",
     "                                 0.05, 0.05, 0.05, 0.05,\n",
     "                                 0.05])\n",
+    "    n_cycles = np.random.choice([1, 2, 3, 4], p=[0.25, 0.25, 0.25, 0.25])\n",
+    "    n_cycles = 1\n",
     "    if choice == 1:\n",
     "        nom_list.append(choice)\n",
     "        data = create_data(sign1=1, sign2=0, n_cycles=n_cycles)\n",
@@ -293,7 +338,7 @@
     "    if choice == 0:\n",
     "        nom_list.append(choice)\n",
     "        data = create_data(sign1=0, sign2=0, n_cycles=n_cycles)\n",
-    "    df = df.append(data)\n",
+    "    df.append(data)\n",
     "    if (i%100 == 0):\n",
     "        print(i)\n",
     "\n",
@@ -302,16 +347,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = create_data(sign1=0, sign2=0, n_cycles=1)\n",
+    "nom_list = []\n",
+    "n_cycles = 1\n",
+    "df = df.iloc[0:0]\n",
+    "lab_unseen = []\n",
     "\n",
-    "df = create_data(sign1=1, sign2=0, n_cycles=1)\n",
+    "for k in range(3):\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(0)\n",
+    "        df = df.append(create_data(sign1=0, sign2=0, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(1)\n",
+    "        df = df.append(create_data(sign1=1, sign2=0, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(2)\n",
+    "        df = df.append(create_data(sign1=2, sign2=0, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(3)\n",
+    "        df = df.append(create_data(sign1=0, sign2=1, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(4)\n",
+    "        df = df.append(create_data(sign1=0, sign2=2, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(5)\n",
+    "        df = df.append(create_data(sign1=1, sign2=1, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(6)\n",
+    "        df = df.append(create_data(sign1=2, sign2=2, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(7)\n",
+    "        df = df.append(create_data(sign1=2, sign2=1, n_cycles=n_cycles))\n",
+    "    for i in range(5):\n",
+    "        lab_unseen.append(8)\n",
+    "        df = df.append(create_data(sign1=1, sign2=2, n_cycles=n_cycles))\n",
     "\n",
+    "label_df = pd.DataFrame(np.array(lab_unseen), columns=['label'])\n",
     "save = True\n",
     "if save:\n",
-    "    df.to_csv(\"Data/Boat_nominal_data/Boat_unseen.csv\")\n"
+    "    df.to_csv(\"Data/Boat_nominal_data/Boat_unseen.csv\")\n",
+    "    label_df.to_csv(\"Data/Boat_nominal_data/Boat_unseen_labels.csv\")\n"
    ]
   },
   {
